test/modules/bradc/userInsteadOfStandard/foo2.good
<command line>: warning: ambiguous module source file -- using $CHPL_HOME/modules/standard/ChapelIO.chpl over ChapelIO.chpl
foo2.chpl:31: error: unresolved call 'testchapelio()'
foo2.chpl:31: note: because no functions named testchapelio found in scope
